--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -9,25 +9,25 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    steps:
-    # Checkout repo
-    - uses: actions/checkout@v4
 
-    # Setup Node.js
-    - uses: actions/setup-node@v4
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
         node-version: 18
 
-    # Install dependencies
-    - run: npm ci
+    - name: Install dependencies
+      run: npm ci
 
-    # Install Playwright browsers
-    - run: npx playwright install --with-deps
+    - name: Install Playwright browsers
+      run: npx playwright install --with-deps
 
-    # Run tests
-    - run: npx playwright test --reporter=dot
+    - name: Run Playwright tests
+      run: npx playwright test
 
-    # Upload HTML report as artifact
     - name: Upload Playwright HTML Report
       if: always()
       uses: actions/upload-artifact@v4
